# Aegis

./: .gitignore  CMakeLists.txt  README.md  README.zh-CN.md  main.cpp
apps/demo_background/: app.llext  demo_background_app.cpp  demo_background_contract.cpp  manifest.json
apps/demo_hello/: app.llext  demo_hello_app.cpp  demo_hello_contract.cpp  manifest.json
apps/demo_hostlink/: app.llext  demo_hostlink_app.cpp  demo_hostlink_contract.cpp  manifest.json
apps/demo_info/: app.llext  demo_info_app.cpp  demo_info_contract.cpp  manifest.json
apps/files/: app.llext  files_app.cpp  manifest.json
apps/settings/: manifest.json  settings_app.cpp
core/aegis_core/: aegis_core.cpp  aegis_core.hpp
core/app_registry/: app_admission_policy.cpp  app_admission_policy.hpp  app_catalog.cpp  app_catalog.hpp  app_catalog_builder.cpp  app_catalog_builder.hpp  app_compatibility_evaluator.cpp  app_compatibility_evaluator.hpp  app_manifest.cpp  app_manifest.hpp  app_package_source.hpp  app_permissions.cpp  app_permissions.hpp  app_registry.cpp  app_registry.hpp  app_runtime_policy.cpp  app_runtime_policy.hpp
core/app_session/: app_session.cpp  app_session.hpp
core/boot/: boot_coordinator.cpp  boot_coordinator.hpp
core/device_registry/: device_registry.cpp  device_registry.hpp
docs/: app-abi.md  app-assets-and-icons.md  app-model.md  app-runtime-memory-model.md  architecture.md  bootstrap-phase-1.md  building-zephyr.md  capability-model.md  device-adaptation.md  foreground-page-contract.md  host-api.md  isolated-app-runtime-blueprint.md  lifecycle.md  llext-app-constraints.md  manifest.md  quick-start-zephyr.md  runtime-loader.md  runtime-refactor-slices.md  sdk.md  service-gateway.md  shell.md  system-apps.md  ui-icon-inventory.md  ui-patterns.md  ui-system.md  ui-visual-spec.md  ui-wireframes.md  zephyr-onboarding.md
platform/logging/: logger.hpp
ports/host/: filesystem_app_package_source.cpp  filesystem_app_package_source.hpp  host_logger.cpp  host_logger.hpp  host_main.cpp
ports/zephyr/: CMakeLists.txt  README.md  app_modules.cmake  input_tca8418_keypad.c  prj.conf  zephyr_app_package_source.cpp  zephyr_app_package_source.hpp  zephyr_appfs.cpp  zephyr_appfs.hpp  zephyr_bluetooth_support.c  zephyr_board_backend_config.cpp  zephyr_board_backend_config.hpp  zephyr_board_descriptors.cpp  zephyr_board_descriptors.hpp  zephyr_board_packages.cpp  zephyr_board_packages.hpp  zephyr_board_runtime.cpp  zephyr_board_runtime.hpp  zephyr_board_support.cpp  zephyr_board_support.hpp  zephyr_boot_log_logger.cpp  zephyr_boot_log_logger.hpp  zephyr_build_config.hpp  zephyr_device_packages.hpp  zephyr_gpio_pin.hpp  zephyr_llext_adapter.cpp  zephyr_llext_adapter.hpp  zephyr_logger.cpp  zephyr_logger.hpp  zephyr_lvgl_assets.cpp  zephyr_lvgl_assets.hpp  zephyr_lvgl_file_entry_icons_asset.cpp  zephyr_lvgl_files_icon_asset.cpp  zephyr_lvgl_settings_icon_asset.cpp  zephyr_lvgl_shell_ui.cpp  zephyr_lvgl_shell_ui.hpp  zephyr_lvgl_status_icons_asset.cpp  zephyr_main.cpp  zephyr_shell_display_adapter.cpp  zephyr_shell_display_adapter.hpp  (+13 more)
runtime/fault/: fault.hpp
runtime/handles/: app_handle_table.cpp  app_handle_table.hpp
runtime/host_api/: host_api.cpp  host_api.hpp  service_gateway_dispatch.cpp  service_gateway_dispatch.hpp
runtime/lifecycle/: lifecycle.hpp
runtime/loader/: compiled_app_contract_registry.cpp  compiled_app_contract_registry.hpp  llext_adapter.hpp  llext_loader_backend.cpp  llext_loader_backend.hpp  loader_backend.hpp  runtime_loader.cpp  runtime_loader.hpp  stub_llext_adapter.cpp  stub_llext_adapter.hpp  stub_loader_backend.cpp  stub_loader_backend.hpp
runtime/ownership/: resource_ownership_table.cpp  resource_ownership_table.hpp
runtime/quota/: quota_ledger.cpp  quota_ledger.hpp
runtime/recovery/: recovery_plan.hpp
runtime/supervisor/: app_instance.cpp  app_instance.hpp  app_supervisor.cpp  app_supervisor.hpp
runtime/syscall/: syscall_gateway.cpp  syscall_gateway.hpp
scripts/: build_zephyr.py  check_host_env.py  check_linux_env.py  pack_app_icon.py  png_to_app_icon.py  verify_pager_boot.py  verify_tdeck_boot.py
services/audio/: zephyr_audio_service.cpp  zephyr_audio_service.hpp
services/common/: service_interfaces.hpp
services/gps/: zephyr_gps_service.cpp  zephyr_gps_service.hpp
services/hostlink/: zephyr_hostlink_service.cpp  zephyr_hostlink_service.hpp
services/logging/: console_logging_service.cpp  console_logging_service.hpp
services/notification/: console_notification_service.cpp  console_notification_service.hpp  zephyr_notification_service.cpp  zephyr_notification_service.hpp
services/power/: zephyr_power_service.cpp  zephyr_power_service.hpp
shell/: aegis_shell.cpp  aegis_shell.hpp
(+106 files in other folders)
